<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/actMain_hiitSessionBtn"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/item_circular_border_ripple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/actMain_runningSessionBtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hiit_session_text"
            android:textColor="@color/purple_200"
            android:textSize="22sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/actMain_runningSessionBtn"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:background="@drawable/item_circular_border_ripple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actMain_hiitSessionBtn"
        app:layout_constraintBottom_toTopOf="@id/actMain_statisticsBtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/running_session_text"
            android:textColor="@color/purple_200"
            android:textSize="22sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/actMain_statisticsBtn"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/item_circular_border_ripple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actMain_runningSessionBtn"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/statistics_text"
            android:textColor="@color/purple_200"
            android:textSize="22sp"
            android:textStyle="bold" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>