<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.HiitDifficultySelectFragment">

    <TextView
        android:id="@+id/fragHiitDiffSel_exercises_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please select a difficulty level:"
        android:textColor="@color/purple_700"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="20dp">

    <FrameLayout
        android:id="@+id/fragHiitDiffSel_beginner_button"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/item_circular_border_ripple"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fragHiitDiffSel_beginner_button"
            android:textColor="@color/purple_200"
            android:textSize="22sp"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragHiitDiffSel_intermediate_button"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/item_circular_border_ripple"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fragHiitDiffSel_intermediate_button"
            android:textColor="@color/purple_200"
            android:textSize="22sp"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragHiitDiffSel_advanced_button"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/item_circular_border_ripple"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fragHiitDiffSel_advanced_button"
            android:textColor="@color/purple_200"
            android:textSize="22sp"
            android:textStyle="bold" />

    </FrameLayout>
    </LinearLayout>

</LinearLayout>